--- a/media/css/sandstone/lib.less
+++ b/media/css/sandstone/lib.less
@@ -54,6 +54,8 @@
 @linkSpaceBlue:      rgb(47,138,202);
 @linkSpacePurple:    rgb(147,111,188);
 
+@mozillaRed: #c13832;
+
 @buttonGreen: #81bc2e;
 @buttonGreenDark: darken(@buttonGreen, 10%);
 @buttonTextColor: #fff;
