--- a/etc/cron.d/bedrock-stage.tmpl
+++ b/etc/cron.d/bedrock-stage.tmpl
@@ -1,23 +1,23 @@
+#
+# {{ header }}
+#
+
 MAILTO="webops-cron@mozilla.com,cron-bedrock@mozilla.com"
-BEDROCK=/data/bedrock-stage/src/www.allizom.org-django/bedrock
-BEDROCK_DEPLOY=/data/bedrock-stage/deploy
-# TODO: update rest of cron jobs to use the above env variables
 
-# webdev requests that prod auto-updates the PHP side, for similar to old
-0-59/10 * * * * root /data/bedrock-stage/src/update-www.allizom.org.sh
+*/10 * * * * {{ user }} /data/bedrock-stage/src/update-www.allizom.org.sh
 
-*/15 * * * * root /data/bedrock-stage/src/update-www.allizom.org-svn-locale.sh
+*/15 * * * * {{ user }} /data/bedrock-stage/src/update-www.allizom.org-svn-locale.sh
 # outputs when the run completed to http://www.allizom.org/media/locale_finished.txt
 
 # In testing for bug 753566 resolution...
 # not completely sure how I want to solve this yet
 #
 # run the crons from the admin node, but on the web nodes... does extra work, but works
-#0 * * * * *  root echo "cd /data/www/www.allizom.org-django/bedrock; python manage.py cron update_feeds | /usr/bin/issue-multi-command bedrock-stage
-*/5    * * * * root cd /data/bedrock-stage/src/www.allizom.org-django/bedrock; python manage.py rnasync > /dev/null 2>&1
+#0 * * * * *  {{ user }} echo "cd /data/www/www.allizom.org-django/bedrock; python manage.py cron update_feeds | /usr/bin/issue-multi-command bedrock-stage
+*/5    * * * * {{ django_manage }} rnasync > /dev/null 2>&1
 
 # bug 996144
-1 */2 * * * root cd /data/bedrock-stage/src/www.allizom.org-django/bedrock; python manage.py cron update_tweets > /dev/null 2>&1
+1 */2 * * * {{ django_cron }} update_tweets > /dev/null 2>&1
 
 #
 # alternative- run the cron twice right on the admin node, passing --settings=settings/memcache-XXX.py... will this work?
@@ -26,9 +26,9 @@ BEDROCK_DEPLOY=/data/bedrock-stage/deploy
 #0 * * * * * root cd /data/www.allizom.org-django/bedrock; python manage.py --settings=settings/memcache-scl3.py cron update_feeds 2>&1 1> /dev/null | grep -v 'old-style Playdoh layout'"
 
 # bug 1072999
-41 * * * * root cd $BEDROCK && python manage.py update_security_advisories --quiet
+41 * * * * {{ django_manage }} update_security_advisories --quiet
 
 # bug 1087533
 # TODO: redirect output to null after initial deployment and verification
-42 * * * * root cd $BEDROCK && python manage.py cron update_reps_ical
+42 * * * * {{ django_cron }} update_reps_ical
 
