Update Fx0 device screenshot. Bug 1116429.

--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -1848,7 +1848,7 @@
           </li>
           <li class="last">
             <a href="#au_fx0" class="device-thumbnail">
-              <img src="{{ media('/img/firefox/os/devices/smartphones/au-fx0-thumb.png') }}" alt="">
+              <img src="{{ media('/img/firefox/os/devices/smartphones/au-fx0-thumb.png?2015-01') }}" alt="">
               <span class="device-name raw-format">{{ _('Fx0') }}</span>
               <div class="availability-notice">
                 <span class="is-available">{{ _('Available') }}</span>
@@ -2115,7 +2115,7 @@
                 </div>
 
                 <div class="feature-group image">
-                  <img src="{{ media('/img/firefox/os/devices/smartphones/au-fx0.png') }}" alt="{{ _('au Fx0') }}">
+                  <img src="{{ media('/img/firefox/os/devices/smartphones/au-fx0.png?2015-01') }}" alt="{{ _('au Fx0') }}">
                 </div>
 
                 <div class="feature-group stats">
