Fixes for RTL community events list
change direction of parag on the top of table and the direction of table's content

--- a/media/css/mozorg/contribute/contribute-2015.less
+++ b/media/css/mozorg/contribute/contribute-2015.less
@@ -1619,7 +1619,28 @@ textarea:focus {
     }
 }
 
+[dir='rtl'] {
+    .events-list .ical-link {
+        float: right;
 
+        a {
+            margin-left: 0;
+            margin-right: 25px;
+
+            &:before {
+                left: auto;
+                right: 0;
+            }
+        }
+    }
+
+    .events-table {
+        td,
+        th {
+            text-align: right;
+        }
+    }
+}
 
 /*-------------------------------------------------------------------------*/
 // Mozillian @Stories
