change direction of parag on the top of table and the direction of table's content

--- a/media/css/mozorg/contribute/contribute-2015.less
+++ b/media/css/mozorg/contribute/contribute-2015.less
@@ -1543,6 +1543,19 @@ textarea:focus {
     }
 }
 
+html[lang="ar"] .events-list {
+		.ical-link{
+			float:right;
+		}
+}
+
+html[lang="ar"] .events-list {
+		.ical-link{
+		a:before{
+			position:relative;
+	}
+	}
+}
 .events-head {
     .clearfix;
     margin: 0 0 30px;
@@ -1619,7 +1632,11 @@ textarea:focus {
     }
 }
 
-
+html[lang="ar"] .events-table{
+	td,th {
+	   text-align:right;
+	}
+}
 
 /*-------------------------------------------------------------------------*/
 // Mozillian @Stories
