Fix Bug 1097297 - Link to other systems & languages on the Firefox Developer Edition page

--- a/media/css/firefox/developer.less
+++ b/media/css/firefox/developer.less
@@ -78,16 +78,16 @@
         border-radius: 4px;
         box-shadow: 0 4px 10px #000;
     }
-    .privacy {
-        margin: @baseLine/2 auto 0;
-        .font-size(@smallFontSize);
-        opacity: .8;
-    }
 }
 
-.download-button .download-link {
-    .button-flat;
-    line-height: inherit;
+.download-button {
+    .download-link {
+        .button-flat;
+        line-height: inherit;
+    }
+    small.download-other.download-other-desktop {
+        display: block !important;
+    }
 }
 
 .android {
