--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -506,6 +506,10 @@
         }
     }
 
+    small.download-other {
+        display: none !important;
+    }
+
     &.download-button-small {
         .download-link {
             width: 210px;
