Fix Bug 1118339 - Update https://www.mozilla.org/en-US/firefox/channel/#aurora for Android ARM links to reflect new FTP directory changes

--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -678,17 +678,22 @@
 
 // Android architecture detection
 
+.download-button .download-list .os_android.api-9,
 .download-button .download-list .os_android.x86,
-.download-button .download-other.os_android .armv7,
+.download-button .download-other.os_android .api-11,
+.android.gingerbread .download-button .download-list .os_android.api-11,
+.android.gingerbread .download-button .download-other.os_android .api-9,
 .android.x86 .download-button .download-list .os_android.armv7,
 .android.x86 .download-button .download-other.os_android .x86 {
     display: none !important;
 }
 
+.android.gingerbread .download-button .download-list .os_android.api-9,
 .android.x86 .download-button .download-list .os_android.x86 {
     display: block !important;
 }
 
+.android.gingerbread .download-button .download-other.os_android .api-11,
 .android.x86 .download-button .download-other.os_android .armv7 {
     display: inline !important;
 }
