Bug 504790 - Add new faq for Geolocation
Add a new faq about how to add support for Geolocation to
website.

--- a/bedrock/firefox/templates/firefox/geolocation.html
+++ b/bedrock/firefox/templates/firefox/geolocation.html
@@ -201,6 +201,18 @@
   </div>
 </section>
 
+<section>
+  <h3 data-accordion-role="tab">{{ _('How can I add support for Geolocation to my web site?') }}</h3>
+  <div data-accordion-role="tabpanel">
+    <p>
+    {% trans url="https://developer.mozilla.org/en/Using_geolocation" %}
+    Web developers can integrate the Geolocation support into your service by
+    following the instructions at <a href="{{ url }}" title="developer.mozilla.org | Using Geolocation">Mozilla Developer Center Using Geolocation</a>.
+    {% endtrans %}
+    </p>
+  </div>
+</section>
+
 </section><!-- end #faq -->
 
 <div style="display:none">
