--- a/media/css/mozorg/contribute/contribute-2015.less
+++ b/media/css/mozorg/contribute/contribute-2015.less
@@ -1543,18 +1543,14 @@ textarea:focus {
     }
 }
 
-html[lang="ar"] .events-list {
-		.ical-link{
-			float:right;
-		}
-}
+html[dir="rtl"] .events-list {
+  .ical-link{
+    float: right;
 
-html[lang="ar"] .events-list {
-		.ical-link{
-		a:before{
-			position:relative;
-	}
-	}
+    a:before {
+      position: relative;
+    }
+  }
 }
 .events-head {
     .clearfix;
@@ -1632,10 +1628,11 @@ html[lang="ar"] .events-list {
     }
 }
 
-html[lang="ar"] .events-table{
-	td,th {
-	   text-align:right;
-	}
+html[dir="rtl"] .events-table {
+  td,
+  th {
+      text-align:right;
+  }
 }
 
 /*-------------------------------------------------------------------------*/
