Fix Bug 1121056 - Wrong date on the ESR release overview image

--- a/media/css/firefox/organizations.less
+++ b/media/css/firefox/organizations.less
@@ -19,6 +19,10 @@
 
 }
 
+img#release-overview {
+    height: auto;
+}
+
 @media only screen and (min-width: @breakDesktop) {
     img#release-overview {
         max-width: none;
