--- a/bedrock/firefox/templates/firefox/organizations/faq.html
+++ b/bedrock/firefox/templates/firefox/organizations/faq.html
@@ -58,7 +58,7 @@
 {% endtrans %}
 </p>
 
-<p><a href="{{ media('/img/firefox/organizations/release-overview.png?201406') }}"><img src="{{ media('/img/firefox/organizations/release-overview.png?201406') }}" alt="{{ _('Firefox ESR Release Overview') }}" id="release-overview" /></a></p>
+<p><a href="{{ media('/img/firefox/organizations/release-overview-high-res.png?201501') }}">{{ high_res_img('img/firefox/organizations/release-overview.png?201501', {'alt': _('Firefox ESR Release Overview'), 'width': '832', 'height': '384', 'id': 'release-overview'}) }}</a></p>
 
 <p>
 {% trans %}
