Bug 1112324 - Privacy Day home page promo

--- a/bedrock/mozorg/templates/mozorg/home/home-new.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-new.html
@@ -115,11 +115,19 @@
           </a>
         </li>
       {% endif %}
+      {% if l10n_has_tag('privacy_day') and waffle.switch('mozorg-home-privacy-promo') %}
+        <li id="promo-2" class="item promo-small-landscape advocacy" data-name="Learn about Mozilla Advocacy">
+          <a class="panel-link" href="https://advocacy.mozilla.org">
+            <h2>{{ _('Learn about Mozilla Advocacy') }}</h2>
+          </a>
+        </li>
+      {% else %}
         <li id="promo-2" class="item promo-small-landscape privacy" data-name="Understand your privacy online">
           <a class="panel-link" href="{{ url('privacy.privacy-day') }}">
             <h2>{{ _('Understand your privacy online') }}</h2>
           </a>
         </li>
+      {% endif %}
         <li id="promo-3" class="item promo-face">
           {{ promo_face(1) }}
         </li>
@@ -136,6 +144,29 @@
             <a class="fxos-link" href="{{ url('firefox.desktop.index') }}">{{ _('Learn more') }}</a>
           </div>
         </li>
+    {% if l10n_has_tag('privacy_day') and waffle.switch('mozorg-home-privacy-promo') %}
+      {% if LANG.startswith('en') and waffle.switch('mozorg-home-privacy-promo-jan28') %}
+        <li id="promo-6" class="item promo-large-landscape privacy-day" tabindex="0" data-name="January 28 is Data Privacy Day">
+          <h2 class="primary go">January 28 is Data Privacy Day</h2>
+          <a class="panel-link" rel="external" href="{{ url('privacy.privacy-day') }}">
+            <div class="secondary">
+              <h3>Get smart on privacy<br> in four easy steps.</h3>
+              <p class="more">Learn how</p>
+            </div>
+          </a>
+        </li>
+      {% else %}
+        <li id="promo-6" class="item promo-large-landscape privacy-day" tabindex="0" data-name="Get smart on privacy">
+          <h2 class="primary go">{{ _('Get Smart on Privacy') }}</h2>
+          <a class="panel-link" rel="external" href="{{ url('privacy.privacy-day') }}">
+            <div class="secondary">
+              <h3>{{ _('Learn how to give yourself more control online in four easy steps.') }}</h3>
+              <p class="more">{{ _('Get smart on privacy') }}</p>
+            </div>
+          </a>
+        </li>
+      {% endif %}
+    {% else %}
         <li id="promo-6" class="item promo-large-landscape webmaker" tabindex="0" data-name="Teach the Web">
           <h2 class="primary go">{{ _('Teach the Web') }}</h2>
           <a class="panel-link" rel="external" href="https://webmaker.org/">
@@ -145,6 +176,7 @@
             </div>
           </a>
         </li>
+    {% endif %}
         <li id="promo-7" class="item promo-face">
           {{ promo_face(3) }}
         </li>
