--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -761,6 +761,20 @@ html[lang|="en"] {
 }
 
 /****************************************************************************/
+// Advocacy
+.promo-small-landscape.advocacy {
+    background-color: #3fa9f1;
+    background-image: url(/media/img/home/voices/promos/advocacy/advocacy-logo.png);
+    background-position: 15px 20px;
+    background-repeat: no-repeat;
+    .background-size(100px, 100px);
+
+    h2 {
+        padding: 20px 10px 10px 130px;
+    }
+}
+
+/****************************************************************************/
 // Appmaker
 .promo-small-landscape.appmaker {
     background-color: #5e6ba1;
@@ -846,6 +860,21 @@ html[lang|="en"] {
         padding: 35px 0 35px 140px;
         min-height: 50px;
         background: url(/media/img/home/voices/promos/webmaker/webmaker.png?11-21-2014) 20px 15px no-repeat;
+    }
+}
+
+/****************************************************************************/
+// Privacy Day
+.promo-large-landscape.privacy-day {
+    background: #c33b32; // red
+
+    h2 {
+        padding: 120px @baseLine 0 @baseLine;
+        margin-top: @baseLine;
+        background-image: url(/media/img/home/voices/promos/privacy/privacy-shield.svg);
+        background-position: top center;
+        background-repeat: no-repeat;
+        .background-size(90px, 103px);
     }
 }
 
@@ -1654,6 +1683,12 @@ html[lang|="en"] {
     .promo-small-landscape.privacy {
         background-image: url(/media/img/home/voices/promos/privacy/privacy-high-res.png);
         .background-size(121px, 120px);
+    }
+
+    // Advocacy
+    .promo-small-landscape.advocacy {
+        background-image: url(/media/img/home/voices/promos/advocacy/advocacy-logo-high-res.png);
+        .background-size(100px, 100px);
     }
 
     // Volunteer
