--- a/bedrock/legal/templates/legal/base-resp.html
+++ b/bedrock/legal/templates/legal/base-resp.html
@@ -2,6 +2,7 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
+{% add_lang_files "legal/index" %}
 {% extends "base-resp.html" %}
 
 {% block page_css %}
